--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TelaFusion | Filmes e Séries</title>
+<style>
 body {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100vh; /* altura total da tela */
     margin: 0;
     background-image: url('imagens/images.jpeg');
     background-size: cover;
@@ -15,9 +22,10 @@ body {
     text-align: center;
     font-family: Arial, sans-serif;
     image-rendering: auto;
-    position: relative;
+    position: relative; /* Necessário para o ::before funcionar */
 }
 
+/* Camada escura sobre o fundo */
 body::before {
     content: "";
     position: absolute;
@@ -32,5 +40,12 @@ body::before {
 h1, p {
     text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
     position: relative;
-    z-index: 1;
+    z-index: 1; /* Mantém o texto acima do overlay */
 }
+</style>
+</head>
+<body>
+<h1>Tela Fusion</h1>
+<p>Filmes e séries na palma da sua mão.</p>
+</body>
+</html>
