--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-color: #000;
-    color: green;
+    color: red;
     text-align: center;
     font-family: Arial, sans-serif;
     image-rendering: auto;
