--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@ h1, p {
 </head>
 <body>
 <h1>Tela Fusion</h1>
-<p>Filmes e séries na palma da sua mão.</p>
+<p>Bem-vindo ao Tela Fusion</p>
 </body>
 </html>
