--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <!-- MAIS VISTOS DO MUNDO -->
-  <h2 class="section-title">Trailes</h2>
+  <h2 class="section-title">Trailers</h2>
   <section class="grid" id="grid-top" aria-live="polite"></section>
 
   <!-- CATÁLOGO GERAL -->
